Se añade parrafo y cambiamos su color en hoja de estilos

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Primer Proyecto</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse error totam dolores vitae natus enim, itaque, cum libero quisquam amet architecto eos alias facilis, incidunt animi. Maxime enim alias a?</p>
 </body>
 </html>
